[gd_scene format=4 uid="uid://broo4ohx58k7r"]

[ext_resource type="PackedScene" uid="uid://eftm7r36uh1u" path="res://characters/player/player.tscn" id="1_fca3u"]
[ext_resource type="Texture2D" uid="uid://bgqu52fk2s1q8" path="res://assets/tilesets/tiles/piso externo.png" id="1_kna8f"]
[ext_resource type="Texture2D" uid="uid://cp3iuwvyi7ljh" path="res://assets/tilesets/tiles/parede externa.png" id="2_0aw1h"]
[ext_resource type="Texture2D" uid="uid://c8yo1norv82vs" path="res://assets/tilesets/tiles/parede lateral.png" id="3_2xhw3"]
[ext_resource type="Texture2D" uid="uid://dudc27ekro7o5" path="res://assets/tilesets/jardim/arvoredojardim.png" id="3_adwpb"]
[ext_resource type="Texture2D" uid="uid://1defprm6vl1" path="res://assets/tilesets/jardim/cadeiradeplastico.png" id="4_2xhw3"]
[ext_resource type="Texture2D" uid="uid://i3tg7c1s1p8l" path="res://assets/tilesets/tiles/moldura parede frontal.png" id="4_6ofqw"]
[ext_resource type="Texture2D" uid="uid://dlbblwmj1npjr" path="res://assets/tilesets/jardim/churrasqueira.png" id="5_6ofqw"]
[ext_resource type="Texture2D" uid="uid://mksjfi2us8mf" path="res://assets/tilesets/tiles/moldura parede curva.png" id="5_bwajp"]
[ext_resource type="Texture2D" uid="uid://davgc413u3443" path="res://assets/tilesets/jardim/mangueirajardim.png" id="6_bwajp"]
[ext_resource type="Texture2D" uid="uid://btgj2or60hbdw" path="res://assets/tilesets/jardim/mesinhadojardim.png" id="7_3ymhe"]
[ext_resource type="Texture2D" uid="uid://c12xian5d0uco" path="res://assets/tilesets/jardim/ossinhocachorro.png" id="8_jdnym"]
[ext_resource type="Texture2D" uid="uid://b0byw7v8qirqh" path="res://assets/tilesets/jardim/potedeaguacachorro.png" id="9_51hdg"]
[ext_resource type="Texture2D" uid="uid://bbvym56ib2pl1" path="res://assets/tilesets/jardim/potederaçãocachorro.png" id="10_6dbej"]
[ext_resource type="Texture2D" uid="uid://cyxny3mreqsdt" path="res://assets/tilesets/tiles/porta fechada.png" id="12_bykv1"]
[ext_resource type="Script" uid="uid://bv51ooaq51jef" path="res://scripts/interact_door.gd" id="14_3ymhe"]
[ext_resource type="Script" uid="uid://bqeepr1ej644s" path="res://scripts/transicionar_fase.gd" id="16_6ofqw"]
[ext_resource type="PackedScene" uid="uid://c3k7otaoecr2n" path="res://characters/walter/walter.tscn" id="17_bwajp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3plo0"]
texture = ExtResource("1_kna8f")
texture_region_size = Vector2i(80, 80)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ykk3r"]
texture = ExtResource("2_0aw1h")
texture_region_size = Vector2i(80, 80)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3ymhe"]
texture = ExtResource("3_2xhw3")
texture_region_size = Vector2i(80, 80)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jdnym"]
texture = ExtResource("4_6ofqw")
texture_region_size = Vector2i(80, 80)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_51hdg"]
texture = ExtResource("5_bwajp")
texture_region_size = Vector2i(80, 80)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0

[sub_resource type="TileSet" id="TileSet_v81oa"]
tile_size = Vector2i(80, 80)
sources/0 = SubResource("TileSetAtlasSource_3plo0")
sources/1 = SubResource("TileSetAtlasSource_ykk3r")
sources/2 = SubResource("TileSetAtlasSource_3ymhe")
sources/3 = SubResource("TileSetAtlasSource_jdnym")
sources/4 = SubResource("TileSetAtlasSource_51hdg")

[sub_resource type="CircleShape2D" id="CircleShape2D_jdnym"]
radius = 116.03879

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xhw3"]
size = Vector2(249.5, 216)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_2xhw3"]
a = Vector2(0, 1048)
b = Vector2(2, 232)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6ofqw"]
a = Vector2(-963, 238)
b = Vector2(7, 240)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_51hdg"]
a = Vector2(-964, 244)
b = Vector2(-475, 244)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwajp"]
size = Vector2(107, 77)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ymhe"]
size = Vector2(95, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdnym"]
size = Vector2(81.25, 83)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_51hdg"]
size = Vector2(172.5, 154)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_bwajp"]
a = Vector2(-160, 241)
b = Vector2(2, 243)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3ymhe"]
a = Vector2(-481, 484)
b = Vector2(-481, 242)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jdnym"]
a = Vector2(-472, 480)
b = Vector2(-802, 480)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dbej"]
size = Vector2(351, 20)

[node name="Jardim" type="Node2D" unique_id=472827229]
y_sort_enabled = true

[node name="Cenario" type="Node2D" parent="." unique_id=1022831038]
y_sort_enabled = true

[node name="TileMapLayer" type="TileMapLayer" parent="Cenario" unique_id=1269514825]
tile_map_data = PackedByteArray("AAAGAAoAAAAAAAAAAAAGAAsAAAAAAAEAAAAGAAwAAAAAAAIAAAAHAAoAAAABAAAAAAAHAAsAAAABAAEAAAAHAAwAAAABAAIAAAAIAAoAAAACAAAAAAAIAAsAAAACAAEAAAAIAAwAAAACAAIAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAEAAAAJAAwAAAAAAAIAAAAKAAoAAAABAAAAAAAKAAsAAAABAAEAAAAKAAwAAAABAAIAAAALAAoAAAACAAAAAAALAAsAAAACAAEAAAALAAwAAAACAAIAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAEAAAAMAAwAAAAAAAIAAAANAAoAAAABAAAAAAANAAsAAAABAAEAAAANAAwAAAABAAIAAAAOAAoAAAACAAAAAAAOAAsAAAACAAEAAAAOAAwAAAACAAIAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAEAAAAGAAkAAAAAAAIAAAAHAAcAAAABAAAAAAAHAAgAAAABAAEAAAAHAAkAAAABAAIAAAAIAAcAAAACAAAAAAAIAAgAAAACAAEAAAAIAAkAAAACAAIAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAEAAAAJAAkAAAAAAAIAAAAKAAcAAAABAAAAAAAKAAgAAAABAAEAAAAKAAkAAAABAAIAAAALAAcAAAACAAAAAAALAAgAAAACAAEAAAALAAkAAAACAAIAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAEAAAAMAAkAAAAAAAIAAAANAAcAAAABAAAAAAANAAgAAAABAAEAAAANAAkAAAABAAIAAAAOAAcAAAACAAAAAAAOAAgAAAACAAEAAAAOAAkAAAACAAIAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAEAAAAMAAYAAAAAAAIAAAANAAQAAAABAAAAAAANAAUAAAABAAEAAAANAAYAAAABAAIAAAAOAAQAAAACAAAAAAAOAAUAAAACAAEAAAAOAAYAAAACAAIAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAEAAAAJAAYAAAAAAAIAAAAKAAQAAAABAAAAAAAKAAUAAAABAAEAAAAKAAYAAAABAAIAAAALAAQAAAACAAAAAAALAAUAAAACAAEAAAALAAYAAAACAAIAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAEAAAAGAAYAAAAAAAIAAAAHAAQAAAABAAAAAAAHAAUAAAABAAEAAAAHAAYAAAABAAIAAAAIAAQAAAACAAAAAAAIAAUAAAACAAEAAAAIAAYAAAACAAIAAAAGAAEAAQABAAIAAAAGAAIAAQAAAAIAAAAGAAMAAAAAAAIAAAAHAAEAAQABAAEAAAAHAAIAAQABAAIAAAAHAAMAAAABAAIAAAAIAAEAAQABAAEAAAAIAAIAAQABAAIAAAAIAAMAAAACAAIAAAAJAAEAAQABAAEAAAAJAAIAAQABAAIAAAAJAAMAAAAAAAIAAAAKAAEAAQABAAEAAAAKAAIAAQABAAIAAAAKAAMAAAABAAIAAAALAAEAAQABAAEAAAALAAIAAQABAAIAAAALAAMAAAACAAIAAAAMAAEAAQABAAEAAAAMAAIAAQABAAIAAAAMAAMAAAAAAAIAAAANAAEAAQABAAEAAAANAAIAAQABAAIAAAANAAMAAAABAAIAAAAOAAEAAQACAAEAAAAOAAIAAQACAAIAAAAOAAMAAAACAAIAAAAGAAAAAQABAAEAAAAHAAAAAQABAAEAAAAIAAAAAQABAAEAAAAJAAAAAQABAAEAAAAKAAAAAQABAAEAAAALAAAAAQABAAEAAAAMAAAAAQABAAEAAAANAAAAAQABAAEAAAAOAAAAAQACAAEAAAAGAP//AQABAAAAAAAHAP//AQABAAAAAAAIAP//AQABAAAAAAAJAP//AQABAAAAAAAKAP//AQABAAAAAAALAP//AQABAAAAAAAMAP//AQABAAAAAAANAP//AQABAAAAAAAOAP//AQACAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAEAAAAEAAMAAAABAAAAAAAEAAQAAAABAAAAAAAEAAUAAAABAAEAAAAFAAMAAAACAAAAAAAFAAQAAAACAAAAAAAFAAUAAAACAAEAAAADAAYAAAAAAAIAAAADAAcAAAAAAAAAAAADAAgAAAAAAAEAAAAEAAYAAAABAAIAAAAEAAcAAAABAAAAAAAEAAgAAAABAAEAAAAFAAYAAAACAAIAAAAFAAcAAAACAAAAAAAFAAgAAAACAAEAAAADAAoAAAAAAAAAAAADAAsAAAAAAAEAAAADAAwAAAAAAAIAAAAEAAoAAAABAAAAAAAEAAsAAAABAAEAAAAEAAwAAAABAAIAAAAFAAoAAAACAAAAAAAFAAsAAAACAAEAAAAFAAwAAAACAAIAAAADAAkAAAAAAAIAAAAEAAkAAAABAAIAAAAFAAkAAAACAAIAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAEAAAAPAAUAAAAAAAIAAAAQAAMAAAABAAAAAAAQAAQAAAABAAEAAAAQAAUAAAABAAIAAAARAAMAAAACAAAAAAARAAQAAAACAAEAAAARAAUAAAACAAIAAAADAAAAAQABAAEAAAADAAEAAQAAAAEAAAADAAIAAQAAAAIAAAAEAAAAAQABAAEAAAAEAAEAAQABAAIAAAAEAAIAAQABAAIAAAAFAAAAAQABAAEAAAAFAAEAAQABAAIAAAAFAAIAAQABAAIAAAAFAP//AQABAAAAAAAEAP//AQABAAAAAAADAP//AQABAAAAAAAKAA0AAAABAAAAAAAKAA4AAAABAAEAAAAKAA8AAAABAAIAAAALAA0AAAACAAAAAAALAA4AAAACAAEAAAALAA8AAAACAAIAAAAMAA0AAAACAAAAAAAMAA4AAAACAAEAAAAMAA8AAAACAAIAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAEAAAAJAA8AAAAAAAIAAAA=")
tile_set = SubResource("TileSet_v81oa")

[node name="Arvoredojardim" type="Sprite2D" parent="Cenario" unique_id=936901581]
position = Vector2(1283, 96)
texture = ExtResource("3_adwpb")

[node name="Cadeiradeplastico" type="Sprite2D" parent="Cenario" unique_id=190354562]
position = Vector2(1107, 193)
texture = ExtResource("4_2xhw3")
offset = Vector2(0, 50)

[node name="Churrasqueira" type="Sprite2D" parent="Cenario" unique_id=1252697477]
position = Vector2(375.5, 165)
texture = ExtResource("5_6ofqw")

[node name="Mangueirajardim" type="Sprite2D" parent="Cenario" unique_id=1542960857]
position = Vector2(878, 124)
texture = ExtResource("6_bwajp")

[node name="Mesinhadojardim" type="Sprite2D" parent="Cenario" unique_id=2100091306]
y_sort_enabled = true
position = Vector2(1102, 417)
texture = ExtResource("7_3ymhe")

[node name="Ossinhocachorro" type="Sprite2D" parent="Cenario" unique_id=671087744]
position = Vector2(924, 717)
texture = ExtResource("8_jdnym")

[node name="Potedeaguacachorro" type="Sprite2D" parent="Cenario" unique_id=1364421742]
position = Vector2(302, 834)
texture = ExtResource("9_51hdg")

[node name="Potederaçãocachorro" type="Sprite2D" parent="Cenario" unique_id=953390982]
position = Vector2(309, 650)
texture = ExtResource("10_6dbej")

[node name="Area2D" type="Area2D" parent="Cenario" unique_id=1878111120]
script = ExtResource("14_3ymhe")
cena = "uid://de1c5t3uui0rn"
group_destino = "JardimCozinha"

[node name="PortaFechada" type="Sprite2D" parent="Cenario/Area2D" unique_id=1167988464]
position = Vector2(663, 133)
texture = ExtResource("12_bykv1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cenario/Area2D" unique_id=117691226]
position = Vector2(663, 320)
shape = SubResource("CircleShape2D_jdnym")
debug_color = Color(2.8878452e-07, 0.6443059, 0.2895493, 0.41960785)

[node name="Colisoes" type="Node2D" parent="." unique_id=1855391517]
z_index = 1

[node name="StaticBody2D" type="StaticBody2D" parent="Colisoes" unique_id=1802777004]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=536961949]
position = Vector2(370.75, 238)
shape = SubResource("RectangleShape2D_2xhw3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=1810325584]
position = Vector2(238, 0)
shape = SubResource("SegmentShape2D_2xhw3")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=1508013275]
position = Vector2(1200, 0)
shape = SubResource("SegmentShape2D_2xhw3")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=1284109788]
position = Vector2(1200, 0)
shape = SubResource("SegmentShape2D_6ofqw")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=941264674]
position = Vector2(1200, 798)
shape = SubResource("SegmentShape2D_51hdg")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=295134234]
position = Vector2(309.5, 650.5)
shape = SubResource("RectangleShape2D_bwajp")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=1144638545]
position = Vector2(302.5, 834.5)
shape = SubResource("RectangleShape2D_3ymhe")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=399222695]
position = Vector2(923.375, 718.5)
shape = SubResource("RectangleShape2D_jdnym")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=1451692423]
position = Vector2(1101.75, 388)
shape = SubResource("RectangleShape2D_51hdg")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=1396180589]
position = Vector2(1200, 798)
shape = SubResource("SegmentShape2D_bwajp")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=1673346097]
position = Vector2(1200, 798)
shape = SubResource("SegmentShape2D_3ymhe")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=1928734304]
position = Vector2(1519, 798)
shape = SubResource("SegmentShape2D_3ymhe")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Colisoes/StaticBody2D" unique_id=1758606156]
position = Vector2(1519, 798)
shape = SubResource("SegmentShape2D_jdnym")

[node name="Benicio" parent="." unique_id=1538333174 instance=ExtResource("1_fca3u")]
position = Vector2(607, 395)
speed = 500.0

[node name="Camera2D" type="Camera2D" parent="Benicio" unique_id=2349015]
position = Vector2(207, 110)
zoom = Vector2(0.5, 0.5)
limit_left = -145
limit_top = -260
limit_right = 1775
limit_bottom = 1085
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 20.0

[node name="TransicaoCozinha" type="Area2D" parent="." unique_id=703360985]
script = ExtResource("16_6ofqw")
cena = "uid://de1c5t3uui0rn"
group_destino = "JardimCozinha"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransicaoCozinha" unique_id=906873526]
position = Vector2(872, 1097)
shape = SubResource("RectangleShape2D_6dbej")

[node name="SpawnPos" type="Marker2D" parent="TransicaoCozinha" unique_id=777652052 groups=["CozinhaJardim"]]
position = Vector2(875, 936)

[node name="Walter" parent="." unique_id=899655802 instance=ExtResource("17_bwajp")]
position = Vector2(1071, 200)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1023201132]

[connection signal="body_entered" from="Cenario/Area2D" to="Cenario/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Cenario/Area2D" to="Cenario/Area2D" method="_on_body_exited"]
